<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">猜數字</string>
    <string name="new_game">新遊戲</string>
    <string name="rank">排行榜</string>
    <string name="about">遊戲說明</string>
    <string name="single_match">自我挑戰</string>
    <string name="entpy"></string>
    <string name="history">紀錄：</string>
    <string name="time">時間：</string>
    <string name="view_answer">看答案</string>
    <string name="reset">重玩</string>
    <string name="guess_success_title">恭喜</string>
    <string name="guess_success_body">恭喜您猜對了!\n還要再玩一次嗎?</string>
    <string name="guess_success_body_2">恭喜您贏了!\n還要再玩一次嗎?</string>
    <string name="guess_success_rank">恭喜進入排行榜</string>
    <string name="yes_label">是</string>
    <string name="no_label">否</string>
    <string name="confirm_title">確認</string>
    <string name="confirm_body">確定要直接看答案嗎?</string>
    <string name="confirm_renew_body">確定要重玩嗎?</string>
    <string name="answer_title">答案</string>
    <string name="answer_body">答案為</string>
    <string name="viewed_answer_title">您已經看過答案了</string>
    <string name="continue_game">繼續未完之遊戲</string>
    <string name="name">姓名：</string>
    <string name="rank_button_ok">留名</string>
    <string name="rank_button_cancel">匿名</string>
    <string name="rank_no">排名</string>
    <string name="player">玩家</string>
    <string name="guess_count">次數</string>
    <string name="timer">秒數</string>
    <string name="single_game">自我挑戰</string>
    <string name="compute_game">挑戰電腦</string>
    <string name="net_game">網路對戰</string>
    <string name="match_record">對手紀錄：</string>
    <string name="self_answer">底牌：</string>
    <string name="set_answer">請設定不重覆之四位數字底牌：</string>
    <string name="set_answer_title">設定底牌</string>
    <string name="set_answer_ok">確定</string>
    <string name="set_answer_cancel">取消</string>
    <string name="compute_title">承讓</string>
    <string name="continue_btn">繼續完成</string>
    <string name="continue_label">繼續</string>
    
    <string name="level_title">請選擇難度</string>
    <string name="level_easy_label">簡單</string>
    <string name="level_middle_label">普通</string>
    <string name="level_hard_label">困難</string>
</resources>
