<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linearLayout1" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:orientation="horizontal">
    <TableLayout android:id="@+id/tableLayout1"
		android:layout_height="wrap_content" android:layout_width="wrap_content">
		<LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal" >
			<TextView android:id="@+id/textView1" android:text=""
				android:layout_width="37dip" android:layout_height="37dip" android:textSize="25dip" android:gravity="center" android:background="@drawable/bg"></TextView>
			<TextView android:id="@+id/textView2" android:text=""
				android:layout_width="37dip" android:layout_height="37dip" android:textSize="25dip" android:gravity="center" android:background="@drawable/bg"></TextView>
			<TextView android:id="@+id/textView3" android:text=""
				android:layout_width="37dip" android:layout_height="37dip" android:textSize="25dip" android:gravity="center" android:background="@drawable/bg"></TextView>
			<TextView android:id="@+id/textView4" android:text=""
				android:layout_width="37dip" android:layout_height="37dip" android:textSize="25dip" android:gravity="center" android:background="@drawable/bg"></TextView>
		</LinearLayout>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="1" android:id="@+id/button1" 
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="2" android:id="@+id/button2"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="3" android:id="@+id/button3"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="4" android:id="@+id/button4"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="5" android:id="@+id/button5"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="6" android:id="@+id/button6"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="7" android:id="@+id/button7"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="8" android:id="@+id/button8"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="9" android:id="@+id/button9"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
		</TableRow>
		<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="0" android:id="@+id/button0"
				android:layout_width="50dip" android:layout_height="wrap_content"></Button>
			<Button android:text="Enter" android:id="@+id/btnSingleEnter"
				android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2"></Button>
		</TableRow>
		<LinearLayout android:id="@+id/linearLayout5" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/btnSingleAnswer" android:text="@string/view_answer" android:layout_height="wrap_content"></Button>
			<Button android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/btnNewSingleGame" android:text="@string/reset" android:layout_height="wrap_content"></Button>
		</LinearLayout>
	</TableLayout>
	<LinearLayout android:id="@+id/linearLayout3" android:layout_width="150dip"
		android:layout_height="wrap_content" android:orientation="vertical">
		<LinearLayout android:id="@+id/linearLayout4" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView android:id="@+id/textView6"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time"></TextView>
			<TextView android:id="@+id/textSingleTimer"
					android:layout_width="fill_parent" android:layout_height="fill_parent" android:text=""></TextView>
		</LinearLayout>
		<TextView android:id="@+id/textView8"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history"></TextView>
		<ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent">
        	<TextView android:id="@+id/textSingleHistory"
				android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" android:textSize="20dip"></TextView>
    	</ScrollView>
	</LinearLayout>
	<LinearLayout android:id="@+id/matcherLayout" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<LinearLayout android:id="@+id/linearLayout7" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView android:id="@+id/textView7"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/self_answer"></TextView>
			<TextView android:id="@+id/textSelfAnswer"
					android:layout_width="fill_parent" android:layout_height="fill_parent" android:text=""></TextView>
		</LinearLayout>
		<TextView android:id="@+id/textView9"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/match_record"></TextView>
		<ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView2" android:layout_height="fill_parent">
        	<TextView android:id="@+id/textMatchHistory"
				android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" android:textSize="20dip"></TextView>
    	</ScrollView>
	</LinearLayout>
</LinearLayout>